--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="col mb-4">
             <div class="card h-80 w-50">
-              <a href ="https://erika-tech257.github.io/Holiday-API/" target="blank">
+              <a href ="https://ejholidayapi2.web.app/" target="blank">
               <img src="assets/holiday1.png" class="card-img-top" alt="Holiday API"></a>
               <div class="card-body">
                 <h5 class="card-title">API Project #2</h5>
