--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <a href = "https://codepen.io/erika-tech257" target="blank">
        <i class="fab fa-codepen fa-3x"></i></a>
 
-       <a href = "www.linkedin.com/in/erika-johnson-8b6603133" target="blank">
+       <a href = "https://www.linkedin.com/in/erika-johnson-8b6603133/" target="blank">
        <i class="fab fa-linkedin fa-3x"></i></a>
 
        <a href = "assets/graphic design resume 2020.pdf" target="blank">
