--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
   <link ref="text/css" rel="stylesheet" href="style.css">
 </head>
 
@@ -48,37 +48,36 @@
   <section class="about" id="about">
     <div class="container">
       <div class="profile-img">
-        <img src="assets/Erika.png" alt="">
+        <img src="assets/profile2.jpg"alt="">
       </div>
       <div class="about-details">
         <div class="about-heading">
           <h1>About</h1>
-          <h6>Who is Erika?</h6>
+          <h6>myself</h6>
         </div>
         <p>
           A creative from Rochester, NY, currently residing in the Indianapolis area. I recently graduated from the web
-          development course at Eleven Fifty Academy. Now I'm
-          ready to take the next step in my journey.
+          development course at Eleven Fifty Academy. Now I'm ready to take the next step in my journey.
         </p>
-      </div>
-      <div class="social-media">
-        <ul class="nav-list">
-          <li>
-            <a href="#" class="icon-link">
-              <i class="fab fa-linkedin"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="icon-link">
-              <i class="fab fa-github-square"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="icon-link">
-              <i class="far fa-file-pdf"></i>
-            </a>
-          </li>
-        </ul>
+        <div class="social-media">
+          <ul class="nav-list">
+            <li>
+              <a href="#" class="icon-link">
+                <i class="fab fa-linkedin"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="icon-link">
+                <i class="fab fa-github-square"></i>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="icon-link">
+                <i class="far fa-file-pdf"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
@@ -87,13 +86,10 @@
     <div class="container">
       <div class="section-heading">
         <h1>Portfolio</h1>
-        <h6>Check out some of my work</h6>
+        <h6>Check out my work</h6>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img">
-          <img src="assets/holiday1.png" alt="">
-        </div>
-        <div class="portfolio-description">
+        <div class="portfolio-description has-margin-right">
           <h6>Web Development</h6>
           <h1>Calendar API</h1>
           <p>
@@ -103,10 +99,13 @@
           </p>
           <a href="https://ejholidayapi2.web.app/" target="blank" class="cta">View Project</a>
         </div>
+        <div class="portfolio-img has-margin-right">
+          <img src="assets/holiday1.png" alt="">
+        </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img">
-          <img src="" alt="">
+        <div class="portfolio-img has-margin-right">
+          <img src="assets/comingsoon.jpg" alt=""> 
         </div>
         <div class="portfolio-description">
           <h6>Web Development</h6>
@@ -115,13 +114,10 @@
             A React application that allows you to search a pokemon name, results display information about that
             particular pokemon.
           </p>
-            <a href="#" target="blank" class="cta">View Project</a>
+          <a href="#" target="blank" class="cta">View Project</a>
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img">
-          <img src="assets/Ballr.png" alt="">
-        </div>
         <div class="portfolio-description">
           <h6>Web Development</h6>
           <h1>BALLR APP</h1>
@@ -131,7 +127,10 @@
             created. Utilizing (PERN) PostgreSql, Express, React and Node to set up the server and client side of the
             application. Reactstrap was used to style the website and deployed with Heroku.
           </p>
-            <a href="https://ballrclient.herokuapp.com/" target="blank" class="cta">View Project</a>
+          <a href="https://ballrclient.herokuapp.com/" target="blank" class="cta">View Project</a>
+        </div>
+        <div class="portfolio-img">
+          <img src="assets/Ballr.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
@@ -147,7 +146,7 @@
             allow users to create a post about missing or stray pets and leave comments under specific posts. The goal
             is to reunite lost pets and help stray pets get adopted.
           </p>
-            <a href="https://ej-pawappclient.herokuapp.com/" target="blank" class="cta">View Project</a>
+          <a href="https://ej-pawappclient.herokuapp.com/" target="blank" class="cta">View Project</a>
         </div>
       </div>
     </div>
@@ -160,14 +159,14 @@
         <h6>Connect with me</h6>
       </div>
       <form action="https://formspree.io/f/mqkgaoyk" method="post">
-          <label for="name">Name:</label>
-          <input name="name" id="name" type="text" placeholder="Enter your name..." required>
-          <label for="name">Email:</label>
-          <input name="email" id="email" type="email" placeholder="Enter your email..." required>
-          <label for="message">Message:</label>
-          <textarea name="message" id="message" cols="10" rows="10"></textarea>
-          <button type="submit">Submit</button>
-        </form>
+        <label for="name">Name:</label>
+        <input name="name" id="name" type="text" placeholder="Enter your name..." required>
+        <label for="name">Email:</label>
+        <input name="email" id="email" type="email" placeholder="Enter your email..." required>
+        <label for="message">Message:</label>
+        <textarea name="message" id="message" cols="10" rows="10"></textarea>
+        <button type="submit">Submit</button>
+      </form>
     </div>
   </section>
   <footer class="copyright">
@@ -183,4 +182,5 @@
   <script src="portfolio.js"></script>
 
 </body>
+
 </html>
