css finished for portfolio, about, contact section. Added animation for scroll button

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="portfolio-img has-margin-right">
           <img src="assets/comingsoon.jpg" alt=""> 
         </div>
-        <div class="portfolio-description">
+        <div class="portfolio-description has-margin-right">
           <h6>Web Development</h6>
           <h1>Pokemon API</h1>
           <p>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-description">
+        <div class="portfolio-description has-margin-right">
           <h6>Web Development</h6>
           <h1>BALLR APP</h1>
           <p>
@@ -129,15 +129,15 @@
           </p>
           <a href="https://ballrclient.herokuapp.com/" target="blank" class="cta">View Project</a>
         </div>
-        <div class="portfolio-img">
+        <div class="portfolio-img has-margin-right">
           <img src="assets/Ballr.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img">
+        <div class="portfolio-img has-margin-right">
           <img src="assets/HomePaws.png" alt="">
         </div>
-        <div class="portfolio-description">
+        <div class="portfolio-description has-margin-right">
           <h6>Web Development</h6>
           <h1>Home Bound Paws</h1>
           <p>
@@ -172,8 +172,8 @@
   <footer class="copyright">
     <div class="up" id="up">
       <i class="fas fa-chevron-up"></i>
-      <p>&copy; 2021 Erika Johnson</p>
     </div>
+    <p>&copy; 2021 Erika Johnson</p>
   </footer>
 
 
