css for contact and footer done. Media quesries for responsive design complete, added query for scroll function and added AOS for fading in different sections

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   <!--About Section-->
   <section class="about" id="about">
     <div class="container">
-      <div class="profile-img">
+      <div class="profile-img" data-aos="fade-right" data-aos-delay="300">
         <img src="assets/profile2.jpg"alt="">
       </div>
-      <div class="about-details">
+      <div class="about-details"data-aos="fade-left" data-aos-delay="600">
         <div class="about-heading">
           <h1>About</h1>
           <h6>myself</h6>
@@ -89,7 +89,7 @@
         <h6>Check out my work</h6>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-description has-margin-right">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="300" >
           <h6>Web Development</h6>
           <h1>Calendar API</h1>
           <p>
@@ -99,15 +99,15 @@
           </p>
           <a href="https://ejholidayapi2.web.app/" target="blank" class="cta">View Project</a>
         </div>
-        <div class="portfolio-img has-margin-right">
+        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="600">
           <img src="assets/holiday1.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img has-margin-right">
+        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="900">
           <img src="assets/comingsoon.jpg" alt=""> 
         </div>
-        <div class="portfolio-description has-margin-right">
+        <div class="portfolio-description has-margin-right"data-aos="fade-left" data-aos-delay="1200">
           <h6>Web Development</h6>
           <h1>Pokemon API</h1>
           <p>
@@ -118,7 +118,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-description has-margin-right">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="1400">
           <h6>Web Development</h6>
           <h1>BALLR APP</h1>
           <p>
@@ -129,15 +129,15 @@
           </p>
           <a href="https://ballrclient.herokuapp.com/" target="blank" class="cta">View Project</a>
         </div>
-        <div class="portfolio-img has-margin-right">
+        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="1600">
           <img src="assets/Ballr.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img has-margin-right">
+        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1800">
           <img src="assets/HomePaws.png" alt="">
         </div>
-        <div class="portfolio-description has-margin-right">
+        <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="2000">
           <h6>Web Development</h6>
           <h1>Home Bound Paws</h1>
           <p>
@@ -152,13 +152,13 @@
     </div>
   </section>
   <!--Contact-->
-  <section class="contact">
+  <section class="contact" id="contact">
     <div class="container">
       <div class="section-heading">
         <h1>Contact</h1>
         <h6>Connect with me</h6>
       </div>
-      <form action="https://formspree.io/f/mqkgaoyk" method="post">
+      <form action="https://formspree.io/f/mqkgaoyk" method="post" data-aos="fade-up" data-aos-delay="300">
         <label for="name">Name:</label>
         <input name="name" id="name" type="text" placeholder="Enter your name..." required>
         <label for="name">Email:</label>
