added graphic design to portfolio section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,20 @@
         <h6>Check out my work</h6>
       </div>
       <div class="portfolio-item">
+        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="600">
+          <img src="assets/Adobe.png" alt="">
+        </div>
         <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="300" >
+          <h6>Graphic Design</h6>
+          <h1>Graphic Design Projects</h1>
+          <p>
+            A graphic collage of T-shirt designs and infographics. Illustrations were created in Illustrator, utilizing the pen tool and InDesign for layout. (More coming soon)
+          </p>
+          <a href="assets/GraphicCollage.pdf" target="blank" class="cta">View Projects</a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="500" >
           <h6>Web Development</h6>
           <h1>Calendar API</h1>
           <p>
@@ -99,15 +112,15 @@
           </p>
           <a href="https://ejholidayapi2.web.app/" target="blank" class="cta">View Project</a>
         </div>
-        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="600">
+        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="800">
           <img src="assets/holiday1.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="900">
+        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="700">
           <img src="assets/comingsoon.jpg" alt=""> 
         </div>
-        <div class="portfolio-description has-margin-right"data-aos="fade-left" data-aos-delay="1200">
+        <div class="portfolio-description has-margin-right"data-aos="fade-left" data-aos-delay="1000">
           <h6>Web Development</h6>
           <h1>Pokemon API</h1>
           <p>
@@ -118,7 +131,7 @@
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="1400">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="900">
           <h6>Web Development</h6>
           <h1>BALLR APP</h1>
           <p>
@@ -129,15 +142,15 @@
           </p>
           <a href="https://ballrclient.herokuapp.com/" target="blank" class="cta">View Project</a>
         </div>
-        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="1600">
+        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="1200">
           <img src="assets/Ballr.png" alt="">
         </div>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1800">
+        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="1100">
           <img src="assets/HomePaws.png" alt="">
         </div>
-        <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="2000">
+        <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="1400">
           <h6>Web Development</h6>
           <h1>Home Bound Paws</h1>
           <p>
@@ -149,6 +162,7 @@
           <a href="https://ej-pawappclient.herokuapp.com/" target="blank" class="cta">View Project</a>
         </div>
       </div>
+      
     </div>
   </section>
   <!--Contact-->
