--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
         <div class="social-media">
           <ul class="nav-list">
             <li>
-              <a href="#" class="icon-link">
+              <a href="https://www.linkedin.com/in/erikajohnsontech/" target="blank"> </a>" class="icon-link">
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="icon-link">
+              <a href="https://github.com/Erika-tech257" target="blank"> </a>" class="icon-link">
                 <i class="fab fa-github-square"></i>
               </a>
             </li>
             <li>
-              <a href="#" class="icon-link">
+              <a href="assets/Erika's Resume.pdf" class="icon-link">
                 <i class="far fa-file-pdf"></i>
               </a>
             </li>
