--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         <div class="social-media">
           <ul class="nav-list">
             <li>
-              <a href="https://www.linkedin.com/in/erikajohnsontech/" target="blank"> </a>" class="icon-link">
+              <a href="https://www.linkedin.com/in/erikajohnsontech/" target="blank">
                 <i class="fab fa-linkedin"></i>
               </a>
             </li>
             <li>
-              <a href="https://github.com/Erika-tech257" target="blank"> </a>" class="icon-link">
+              <a href="https://github.com/Erika-tech257" target="blank"> 
                 <i class="fab fa-github-square"></i>
               </a>
             </li>
