added Pokemon API project to portfolio section

--- a/index.html
+++ b/index.html
@@ -118,16 +118,15 @@
       </div>
       <div class="portfolio-item">
         <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="700">
-          <img src="assets/comingsoon.jpg" alt=""> 
+          <img src="assets/PokemonAPI.png" alt=""> 
         </div>
         <div class="portfolio-description has-margin-right"data-aos="fade-left" data-aos-delay="1000">
           <h6>Web Development</h6>
           <h1>Pokemon API</h1>
           <p>
-            A React application that allows you to search a pokemon name, results display information about that
-            particular pokemon.
+            Search your favorite Pokemon to display the results. A responsive application created using HTML, CSS and JavaScript.
           </p>
-          <a href="#" target="blank" class="cta">View Project</a>
+          <a href="https://erika-tech257.github.io/PokemonAPI/" target="blank" class="cta">View Project</a>
         </div>
       </div>
       <div class="portfolio-item">
