updated about section paragraph

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
           <h6>myself</h6>
         </div>
         <p>
-          A creative from Rochester, NY, currently residing in the Indianapolis area. I recently graduated from the web
-          development course at Eleven Fifty Academy. Now I'm ready to take the next step in my journey.
+          A creative from Rochester, NY, currently residing in the Indianapolis area. I studied graphic design at The College of Brockport and I recently graduated from Eleven Fifty Academy's web development course. I have interned for different companies as a graphic designer and created various web applications, proving my skills. Now I'm ready to begin my journey within the design/tech industry.
         </p>
         <div class="social-media">
           <ul class="nav-list">
