added photography section

--- a/index.html
+++ b/index.html
@@ -88,10 +88,24 @@
         <h6>Check out my work</h6>
       </div>
       <div class="portfolio-item">
-        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="600">
+        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="100" >
+          <h6>Photography</h6>
+          <h1>Photography Images</h1>
+          <p>
+            Photography is another one of my passions and it allows me to capture the authenticity of various subject matters. The lens is a powerful tool and can turn simplicity into something complex.  
+            (More coming soon)  
+          </p>
+          <a href="assets/Portfolio Photography.pdf" target="blank" class="cta">View Project</a>
+        </div>
+        <div class="portfolio-img has-margin-right" data-aos="fade-left" data-aos-delay="400">
+          <img src="assets/Nature Photo.jpg" alt="">
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <div class="portfolio-img has-margin-right" data-aos="fade-right" data-aos-delay="600">
           <img src="assets/Adobe.png" alt="">
         </div>
-        <div class="portfolio-description has-margin-right" data-aos="fade-right" data-aos-delay="300" >
+        <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="300" >
           <h6>Graphic Design</h6>
           <h1>Graphic Design Projects</h1>
           <p>
